[package]
name = "mos6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getch = "0.3.1"
common = { path = "../common" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
common = { path = "../common" }

[lib]
doctest = false