[package]
name = "nes-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
nes = { path = "../nes", default-features = false }
embedded-alloc = "0.5.0" # Heap, linked_list allocator
embedded-graphics = "0.7.1" # HAL Display drivers, drawing
embedded-hal = { version = "0.2.5", features = ["unproven"] } # The HAL. Generic pins IO etc..
cortex-m = { version = "0.7.2", features = ["critical-section"] } # low level access to cpu, delays etc.
cortex-m-rt = "0.7" # Runtime, vectors, .bss init etc.
fugit = "0.3.6" # Time, instant, delay, Hertz
rp2040-hal = { version = "0.8.0", features = ["rt", "rom-func-cache", "critical-section-impl"] }
st7789 = "0.7.0"
rp2040-boot2 = "0.2.0"
display-interface-spi = "0.4.1"
critical-section = "1.1.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false