[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
common = { path = "../common" }
mos6502 = { path = "../mos6502" }

[lib]
doctest = false