[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
phf = { version = "0.11.1", default-features = false, features = ["macros"] }
common = { path = "../common" }
mos6502 = { path = "../mos6502", default-features = false }

[features]
std = []
default = ["std", "phf/std"]
debugger = ["mos6502/debugger"]

[lib]
doctest = false
